[package]
name = "interface-events"
version = "0.1.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
repository = "https://github.com/pusateri/interface-events"
license = "MIT"
edition = "2018"

[lib]
name = "interface_events"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
nix = { git = "https://github.com/nix-rust/nix.git" }
crossbeam-channel = "^0.3"
ipnetwork = ">= 0.13"
socket2 = { version = "0.3", features = ["reuseport"] }
mio = "^0.6"
bytes = "0.4"
