[package]
name = "interface-events"
version = "0.1.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
repository = "https://github.com/pusateri/interface-events"
license = "MIT"
edition = "2021"

[lib]
name = "interface_events"
path = "src/lib.rs"

[dependencies]
libc = { git = "ssh://git@github.com/pusateri/libc.git" }
nix = "0.23"
crossbeam-channel = "0.5"
ipnetwork = "0.18"
socket2 = { version = "0.4.2", features = ["all"] }
mio = { version = "0.8", features = ["os-ext", "net"] }
byteorder = "1"
